--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -34,10 +34,16 @@
 }
 
 .popup__input-error {
-  color: red;
   font-size: 12px;
+  color: red;
   min-height: 14px;
   margin-top: 5px;
+  display: block;
+  visibility: hidden;
+}
+
+.popup__input-error_visible {
+  visibility: visible;
 }
 
 .popup__input_type_error {
@@ -46,8 +52,6 @@
 
 .popup__button_disabled {
   background-color: #e5e5e5;
-  color: #aaa;
+  color: #bfbfbf;
   cursor: default;
-  pointer-events: none;
 }
-
