--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -22,9 +22,13 @@
   visibility: hidden;
   opacity: 0;
   transition: visibility 0s, opacity 0.6s;
-  visibility: hidden;
-  transition: opacity 0.3s ease;
   pointer-events: none;
+}
+
+.popup_opened {
+  visibility: visible;
+  opacity: 1;
+  pointer-events: auto;
 }
 
 .popup__image {
