--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -10,3 +10,24 @@
 @import url("../blocks/popup/popup.css");
 @import url("../blocks/popup/_is-animated/popup_is-animated.css");
 @import url("../blocks/popup/_is-opened/popup_is-opened.css");
+
+.profile__avatar-container {
+  position: relative;
+  cursor: pointer;
+}
+
+.profile__avatar-edit {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5) url('../images/edit-icon.svg') center no-repeat;
+  background-size: 20px;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.profile__avatar-container:hover .profile__avatar-edit {
+  opacity: 1;
+}
