--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -11,23 +11,34 @@
 @import url("../blocks/popup/_is-animated/popup_is-animated.css");
 @import url("../blocks/popup/_is-opened/popup_is-opened.css");
 
-.profile__avatar-container {
-  position: relative;
+.popup_type_avatar .popup__content {
+  padding: 48px 36px 36.51px 36px;
+}
+
+.popup_type_avatar .popup__button {
+  width: 100%;
+  height: 50px;
+  font-size: 18px;
+  line-height: 22px;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #000;
+  border-radius: 2px;
+  border: none;
+  transition: background 0.3s;
+  margin-top: 36px;
+}
+
+.popup_type_avatar .popup__button:hover {
+  background: rgba(0, 0, 0, 0.8);
   cursor: pointer;
 }
 
-.profile__avatar-edit {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.5) url('../images/edit-icon.svg') center no-repeat;
-  background-size: 20px;
-  opacity: 0;
-  transition: opacity 0.3s ease;
-}
-
-.profile__avatar-container:hover .profile__avatar-edit {
-  opacity: 1;
+@media screen and (max-width: 568px) {
+  .popup_type_avatar .popup__button {
+    font-size: 14px;
+    line-height: 17px;
+  }
 }
