--- a/src/blocks/popup/__close/popup__close.css
+++ b/src/blocks/popup/__close/popup__close.css
@@ -1,17 +1,15 @@
 .popup__close {
-  width: 35px;
-  height: 35px;
-  background: transparent url('../../../images/close.svg') center no-repeat;
-  background-size: 35px 35px;
-  border: none;
   position: absolute;
   top: -40px;
   right: -40px;
+  width: 32px;
+  height: 32px;
+  border: none;
+  background: transparent url('../../../images/close.svg') center no-repeat;
+  background-size: 32px 32px;
   cursor: pointer;
-  transition: opacity 0.3s;
-  padding: 0;
-  margin: 0;
-} 
+  transition: opacity 0.3s ease;
+}
 
 .popup__close:hover {
   opacity: 0.6;
