--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -75,6 +75,16 @@
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
 }
 
+.popup__content {
+  position: relative;
+  max-width: 430px;
+  width: 100%;
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 34px 36px 37px;
+  box-sizing: border-box;
+}
+
 @media screen and (max-width: 568px) {
   .popup__content {
     width: 100%;
