--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -57,6 +57,23 @@
   border-color: red;
 }
 
+.popup__error {
+  display: none;
+  font-size: 12px;
+  color: red;
+  margin-top: 4px;
+}
+
+.popup__error_visible {
+  display: block;
+}
+
+.popup__error_visible {
+  color: red;
+  font-size: 12px;
+  display: block;
+}
+
 .popup__button_disabled {
   background-color: #ffffff;
   color: #bfbfbf;
